# crazy-harness

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  mechanism_proposal.yml
.github/workflows/: ci.yml  nightly.yml
crazy_harness/: __init__.py  cli.py
crazy_harness/control_plane/: __init__.py  __main__.py  api.py  context.py  kernel.py  model_governance.py  paired_evals.py  runtime.py  store.py  team_workers.py  views.py
crazy_harness/core/: __init__.py  dispatch.py
crazy_harness/taskpacks/: __init__.py  base.py  evidence_research.py  repo_maintainer.py  repo_scorer.py  repo_team.py  repo_tools.py  research_tools.py  resident_team.py
crazy_harness/worlds/: __init__.py
docs/: AGENT_SKILLS_PROGRESSIVE_DISCLOSURE_WALKTHROUGH.md  ARCHITECTURE_WALKTHROUGH.md  CONTROLLED_CONCURRENCY_WALKTHROUGH.md  DEVELOPMENT_JOURNAL.md  DURABLE_SUPERVISOR_WALKTHROUGH.md  EVIDENCE_RESEARCH_TASKPACK.md  GENERAL_AGENT_TEAM_MASTER_PLAN.md  HARNESS_16H_ACTUAL_CODE_LEARNING_GUIDE.md  HARNESS_CORE_ESSENTIALS.md  MCP_DELAYED_DISCOVERY_WALKTHROUGH.md  ONLINE_TEAM_MODEL_GOVERNANCE_WALKTHROUGH.md  PUBLIC_REPO_MANIFEST.md  README.md  RESIDENT_A2A_V01_CHECKPOINT.md  SINGLE_VS_TEAM_EVAL_DESIGN.md  THIRD_PARTY_LICENSE_MATRIX.md
examples/hello-crazy-api/: Dockerfile  app.py  (+1 more)
frontend/: DESIGN.md  index.html  openapi.json  package-lock.json  package.json
reference_implementations/: README.md  a2a_bus.py  a2a_bus_reference.py  agent_loop.py  agent_loop_reference.py  context_builder_reference.py  microcompact.py  prompt_contract.py  prompt_pack_reference.py
work/: check_course_ready.py  export_control_plane_openapi.py  generate_learning_evidence.py  run_capability_search_demo.py  run_mcp_capability_demo.py  run_model_governance_demo.py
(+281 files in other folders)
