[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crazy-harness"
version = "0.1.0"
description = "From-scratch event-driven resident Agent Team harness with durable recovery and inspectable context."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "BaoBao1996121" }]
keywords = ["agent", "a2a", "llm", "harness", "mcp", "agent-skills"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "httpx>=0.27",
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.9",
]
examples = []
browser = [
  "playwright>=1.50",
]
mcp = [
  "mcp>=1.27,<2",
]

[project.urls]
Homepage = "https://github.com/BaoBao1996121/crazy-harness"
Repository = "https://github.com/BaoBao1996121/crazy-harness"
Issues = "https://github.com/BaoBao1996121/crazy-harness/issues"
Documentation = "https://github.com/BaoBao1996121/crazy-harness/tree/main/docs"

[project.scripts]
crazy = "crazy_harness.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "smoke: fast end-to-end and hard-boundary checks for vertical exploration",
  "nightly: slower stress, chaos, repetition, or external-adapter regression",
  "llm: tests that call a real LLM provider",
]

[tool.setuptools.packages.find]
include = ["crazy_harness*"]
exclude = ["labs*", "work*", "notes*", "outputs*", "research*", "reference_implementations*", "tests*"]
